BUG#18669: Session COM_STATISTICS breaks mysqladmin status.

Changed COM_STATISTICS to display the global status, instead of thead status, for slow queries and table opens.