sql/sql_parse.cc
@@ -1992,13 +1992,17 @@ bool dispatch_command(enum enum_server_command command, THD *thd,
 #else
     char *buff= thd->net.last_error;
 #endif
+
+    STATUS_VAR current_global_status_var;
+    calc_sum_of_all_status(&current_global_status_var);
+
     ulong uptime = (ulong) (thd->start_time - start_time);
     sprintf((char*) buff,
 	    "Uptime: %lu  Threads: %d  Questions: %lu  Slow queries: %lu  Opens: %lu  Flush tables: %lu  Open tables: %u  Queries per second avg: %.3f",
 	    uptime,
 	    (int) thread_count, (ulong) thd->query_id,
-            (ulong) thd->status_var.long_query_count,
-	    thd->status_var.opened_tables, refresh_version, cached_tables(),
+	    current_global_status_var.long_query_count,
+	    current_global_status_var.opened_tables, refresh_version, cached_tables(),
 	    (uptime ? (ulonglong2double(thd->query_id) / (double) uptime) :
 	     (double) 0));
 #ifdef SAFEMALLOC
